samples/_failures_safe/1761301783_5f10cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fca1d160.c: In function ‘main’:
./samples/SAFE/__tmp_fca1d160.c:147:43: error: missing terminating " character
  147 |                     print_matrix(&result, "
      |                                           ^
./samples/SAFE/__tmp_fca1d160.c:147:21: error: expected expression at end of input
  147 |                     print_matrix(&result, "
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_fca1d160.c:147:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fca1d160.c:147:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fca1d160.c:147:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fca1d160.c:147:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fca1d160.c:147:21: error: expected declaration or statement at end of input
